--- a/Pipfile
+++ b/Pipfile
@@ -27,7 +27,9 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 Mako = "==1.1.3"
 PyJWT = "==1.7.1"
-flask-socketio = "*"
+Flask-SocketIO = "==5.0.1"
+python-engineio = "==4.0.1"
+python-socketio = "==5.1.0"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
