--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,16 +9,19 @@
     "axios": "^0.21.1",
     "http-proxy-middleware": "^1.0.5",
     "js-cookie": "^2.2.1",
+    "query-string": "^7.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-images-uploading": "^3.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll-to-bottom": "^4.1.0",
     "react-tinder-card": "^1.3.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
