--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "http-proxy-middleware": "^1.0.5",
     "js-cookie": "^2.2.1",
+    "movie-trailer": "^2.1.0",
     "query-string": "^7.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -18,6 +19,7 @@
     "react-scripts": "3.4.3",
     "react-scroll-to-bottom": "^4.1.0",
     "react-tinder-card": "^1.3.1",
+    "react-youtube": "^7.13.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
